# rust-example-grpc-performance

./: LICENSE  README.md
.github/workflows/: rust.yml
perf/: script-reflection.js  script.js
protos/: voting.proto
service/: Cargo.toml  build.rs
service/env/: logging-dev.yml  logging-qa.yml  service-dev.yml  service-qa.yml  service.yml
service/image/: Dockerfile  Dockerfile.grpcurl  podman-compose-dev.yml  podman-compose-qa.yml
service/src/: custom_tracing_layer.rs  main.rs
